# small_rover

./: .gitignore  README.md  todo
cad/: bumper-rear.FCStd  bumper.FCStd
cad/mainboard/: eagle.epf  untitled.brd  untitled.sch
common/: deepsleep.c  deepsleep.h  i2c.h  ps5_data.h
doc/: arduino-to-idf  design.fzz
mainboard/: CMakeLists.txt  build.sh  flash.sh  monitor.sh  monitor_metrics  motorlogcurve.py  nginx.conf  ota_flash  partitions.csv  run_html_test.sh  sdkconfig  todo
mainboard/main/: CMakeLists.txt  api.c  api.h  app_main.c  arm.c  arm.h  bmx280.c  bmx280.h  buzzer.c  buzzer.h  common.h  fsm.h  gpio.c  gpio.h  hardware.c  hardware.h  hcsr04.c  hcsr04.h  http_server.c  http_server.h  hw_def.h  idf_component.yml  index.html  laser.c  laser.h  led.c  led.h  led_sequence.h  obstacles.c  obstacles.h  obstructions.c  obstructions.h  pwm.c  pwm.h  routerecorder.c  routerecorder.h  sensors.c  sensors.h  servo.c  servo.h  (+7 more)
ps5/: CMakeLists.txt  README.md  build.sh  flash.sh  monitor.sh  sdkconfig
ps5/main/: CMakeLists.txt  app_main.c  bt_types.h  btm_api.h  gap_api.h  hcidefs.h  l2c_api.h  ps5.c  ps5.h  ps5Controller.h  ps5_controller.c  ps5_controller.h  ps5_int.h  ps5_l2cap.c  ps5_parser.c  ps5_spp.c
